[package]
name = "pi_time"
version = "0.1.0"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2021"
description = "The library is used to obtain the time and is not affected by the system modification time"
repository = "https://github.com/GaiaWorld/pi_time.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "time", "systemtime", "pi_time"]

[dependencies]
lazy_static = "*"