[package]
name = "pi_time"
version = "0.2.1"
authors = ["luob <luob@gmail.com>"]
edition = "2021"
description = "The library is used to obtain the time and is not affected by the system modification time"
repository = "https://github.com/GaiaWorld/pi_time.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "time", "systemtime"]

[dependencies]
lazy_static = "1.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
minstant = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
ordered-float = "3.0"