[package]
name = "pi_time"
version = "0.3.1"
authors = ["luob <luob@gmail.com>"]
edition = "2021"
description = "The library is used to obtain the time and is not affected by the system modification time"
repository = "https://github.com/GaiaWorld/pi_time.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "time", "systemtime"]

[dependencies]
ctor = "0.2"
lazy_static = "1.4"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "wasi")'.dependencies]
wasi = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
ordered-float = "3.0"